--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BSBHUVI.github.io/notes",
+"homepage": "https://BSBHUVI.github.io/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
